2003-11-20  DJ Delorie  <dj@redhat.com>

	* config/tc-sh64.c (shmedia_frob_section): Only frob elf32
	sections.

2003-11-19  Kazu Hirata  <kazu@cs.umass.edu>

	* config/tc-h8300.c: Make some functions and global
	variables static appropriately.

2003-11-19  Kazu Hirata  <kazu@cs.umass.edu>

	* config/obj-ieee.c: Remove duplicate prototypes.
	* config/tc-h8300.c: Likewise.

2003-11-19  Kazu Hirata  <kazu@cs.umass.edu>

	* config/tc-h8300.c: Convert to ISO-C.
	* config/tc-h8300.h: Likewise.

2003-11-19  Kazu Hirata  <kazu@cs.umass.edu>

	* config/tc-mcore.h: Remove prototypes already in tc.h.
	* config/tc-tic4x.c: Likewise.

2003-11-19  Kazu Hirata  <kazu@cs.umass.edu>

	* config/tc-arc.c: Remove a local prototype of atof_ieee.
	* config/tc-ip2k.c: Likewise.
	* config/tc-iq2000.c: Likewise.
	* config/tc-tic30.c: Remove a comment.

2003-11-19  Bob Wilson  <bob.wilson@acm.org>

	* config/tc-xtensa.c (xg_emit_insn): Include "dwarf2dbg.h" and add
	call to dwarf2_emit_insn.

2003-11-18  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* config/tc-mips.c (macro): Handle new macros: "lca" and "dlca"
	for loading addresses using CALL relocations.
	Don't emit CALL relocations when a base register is used.

2003-11-15  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* config/tc-mips.c: Formatting fixes.

2003-11-14  Ben Elliston  <bje@wasabisystems.com>

	* config/tc-arm.c (arm_elf_change_section): Not static.

2003-11-13  Nick Clifton  <nickc@redhat.com>

	* tc-arm.c (mapping_state): New function.  Emit a mapping
	symbol if necessary.
        (arm_elf_change_section): New function.  Intercept section
	changes and generate mapping symbols.
        (s_bss): Likewise.
        (s_arm_elf_cons): Likewise.
        (opcode_select): Choose the correct mapping state.
        (md_assemble): Likewise.
        * tc-arm.h (md_elf_section_change_hook): Define.
        * doc/c-arm.texi (ARM Mapping Symbols): New node.
	* NEWS: Mention new feature.

2003-11-12  Daniel Jacobowitz  <drow@mvista.com>
